--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Sriracha&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,6 +8,14 @@
 .font-baskervville {
     font-family: "Baskervville", serif;
   }
+
+.font-libre-baskerville{
+  
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
+  
+}
 
 .font-sriracha{
   font-family: "Sriracha", cursive;
